tests/language_modules/08_routines/valid/function_returns_double.vf
module FunctionReturnsDouble

function ratio() returns Double
is
    return 1.5
end ratio

end FunctionReturnsDouble