tests/language_modules/08_routines/invalid_semantics/unknown_return_type.vf
module UnknownReturnType

function read() returns MissingType
is
    return 1
end read

end UnknownReturnType